# liveplaya-kiosk

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.kiosk.md  README.md  build.rs  build.rs.bk
.github/workflows/: build.yml
data/2023/: Street_Centerlines.json
etc/: README.md  create-sd-card.sh
etc/etc/: autostart  autostart.sh  cmdline.txt  rc.local  screencalibration.conf  unclutter-manifest.txt  wpa_supplicant.conf
etc/pi-kiosk/: README.md
etc/pi-kiosk/scripts/: fix-rc-local.sh  pidisplay.sh  read-only-fs.sh
src/: app.rs  aprs.rs  aprs_is.rs  aprs_log.rs  aprs_serial.rs  aprs_tty.rs  aprslog.rs  bm.rs  bmorg.rs  brc.rs  brc2023.rs  build.rs.bk  clockpos.rs  core.rs  data.rs  err.rs  event_log.rs  geo.rs  io.rs  main.rs  map.rs  model.rs  motion.rs  svc.rs  sync.rs  time.rs  twoway.rs  util.rs  webapi.rs  webui.rs  worker.rs
src/app/: aprs.rs  get_view.rs  post_aprs.rs  print_ttys.rs
src/front/: Makefile  index.html  lib.rs  mapstyle.ts  package-lock.json  package.json  vite.config.ts
src/front.old/: bm2023.json  index.html  index.js  package.json  vite.config.ts
src/front/src/: api.ts  apimock.ts  hooks.ts  main.tsx
src/front/src/components/layouts/: Base.scss  FullPage.tsx  MapPage.scss  MapPage.tsx  TextPage.scss  TextPage.tsx
src/front/src/components/views/: FeatureView.scss  FeatureView.tsx  ListView.tsx  LogView.scss  LogView.tsx  MapView.tsx
src/front/src/components/widgets/: Alert.tsx  Clock.tsx  Logo.tsx  MainMenu.scss  MainMenu.tsx  Map.tsx  MapStyle.ts  Spinner.tsx  Splash.scss  Splash.tsx  Timestamp.tsx
src/io/: aprs.rs  site.rs  store.rs  user.rs
src/svc/: jsonlog.rs
src/sync/: request.rs  task.rs
src/util/: geo.rs  sync.rs  tbc.rs  time.rs  twoway.rs  units.rs
src/webui/: index.html  index.js
src/www/: Makefile  package-lock.json  package.json
