[package]
name = "liveplaya-kiosk"
version = "0.1.0"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
log = { version = "0.4", features = ['std'] }
liveplaya = "0.1"

[patch.crates-io]
liveplaya = { path = '../liveplaya-rs' }

