[package]
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]
edition = "2021"
name = "liveplaya-kiosk"
version = "0.3.2"

[dependencies]
actix = {version = "0.13"}
actix-files = {version = "0.6"}
actix-web = {version = "4.2.0"}
actix-web-actors = {version = "4.2.0"}
aprs = {version = "0.3"}
async-trait = {version = "0.1"}
clap = {version = "4", features = ["derive", "env"]}
ctrlc = "3"
env_logger = "0.9"
fap = {version = "0.2.1"}
geo = {version = "0.26"}
geojson = {version = "0.23", features = ["geo-types"]}
include_dir = "0.7.3"
lazy_static = "1"
log = {version = "0.4", features = ['std']}
serde = {version = "1", features = ["derive"]}
serde-jsonlines = {version="0.4.0", features = ["async"]}
serde-querystring = "0.2.1"
serde_json = "1.0.83"
serde_urlencoded = "0.7.1"
serial = "0.4"
thiserror = "1.0.32"
time = {version = "0.3", features = ["serde", "formatting", "parsing"]}
tokio = {version = "1.20.1", features = ["sync", "macros", "rt-multi-thread", "fs", "time"]}
tokio-serial = "5"
tokio-util = "0.7.8"

[[bin]]
name = "kiosk"
path = "src/main.rs"
